Bump PlantUML sources to plantuml-asl-1.2022.4
Signed-off-by: Sjoerd Talsma <sjoerd@talsma-ict.nl>